# axiom

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
benchmarks/: ablation_bench.py  accuracy_bench.py  capacity_bench.py  compression_bench.py  governor_bench.py  latency_bench.py  realworld_bench.py  theory_validation.py
benchmarks/results/: capacity_results.json  dimension_scaling.json  governor_fact_sweep.json  governor_results.json  governor_threshold_sweep.json  sharding_results.json  theory_validation.json
data/: drug_interactions.json
data/distilled/: axiom_map.pt  interactions_meta.json
data/projection/: training_results.json
examples/: quickstart.py
paper/: axiom_paper.tex
results/: PAPER_VALIDATION_REPORT.md  VALIDATION_REPORT.md  ablation_benchmark.json  accuracy_benchmark.json  compression_benchmark.json  e2e_pipeline_results.json  latency_benchmark.json
scripts/: distill_corpus.py  distill_drugs.py  download_bioasq.py  download_medqa.py  download_pubmedqa.py  generate_tsne_plot.py  run_e2e_pipeline.py  run_inference.py  train_projection.py
src/: __init__.py  config.py  distiller.py  encoder.py  governor.py  priming.py
src/axiom_hdc/: __init__.py  axiom_map.py  cli.py  config.py  distiller.py  drug_checker.py  encoder.py  governor.py  priming.py  utils.py
src/results/: ablation_benchmark.json  accuracy_benchmark.json  compression_benchmark.json  latency_benchmark.json  realworld_benchmark.json
tests/: test_distiller.py
web/: index.html  package-lock.json
web/src/: App.jsx  App.module.css  api.js
web/src/components/: DrugInput.jsx  DrugInput.module.css  Header.jsx  Header.module.css  ResultCard.jsx  ResultCard.module.css
web/src/hooks/: useDrugChecker.js
web/src/styles/: global.css
